# near-python

./: Cargo.toml  Makefile  README.md
examples/: arbitrage_scanner.py  dao_monitor.py  liquidation_bot.py  monitor_burrow.py  price_checker.py
policies/: defi-agent.json  full-access.json  readonly.json
scripts/: build.sh  run.sh
src/: interpreter.rs  lib.rs.disabled  main.py  main.rs  policy.rs
tests/: test_call.py  test_policy.py  test_policy.rs  test_storage.py  test_view.py
wit/tiers/: world-tier1.wit  world-tier2.wit  world-tier3.wit
